# clap_serde_derive

./: .gitlab-ci.yml  Cargo.toml  README.md  check_diff_ver.sh
assets/: LOGO_LICENSE
clap-serde-proc/: Cargo.toml
clap-serde-proc/src/: lib.rs
clap_serde_proc/: Cargo.toml
clap_serde_proc/src/: lib.rs
src/: lib.rs
tests/: bool.rs  unit_struct.rs
